Fixed images not showing.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   width:27%;
   padding:20px;
   border-radius:15px;
-  margin:30px 30px 0 0;
+  margin:30px 20px 0 0;
   display:inline-block;
   vertical-align: top;
 }
